# gts-graph-rag

./: .env.example  .gitignore  README.md  cleanup.sh  create_admin.py  pyproject.toml  requirements.txt  reset_admin_password.py  start.sh  wipe_neo4j.py
backend/: __init__.py  config.py  database.py  mcp_server.py  server.py
backend/agent/: __init__.py  graph.py  nodes.py  state.py  temp_nodes.py  url_intent.py
backend/auth/: __init__.py  dependencies.py  jwt.py
backend/crud/: __init__.py  document.py  organization.py  user.py
backend/ingestion/: __init__.py  cleanup.py  ingest.py  loaders.py  temp_knowledge.py
backend/models/: __init__.py  db_models.py  embeddings.py  llm.py  rerank.py
backend/routers/: __init__.py  auth.py  chat.py  documents.py  organizations.py  temp_routes.py  users.py
backend/schema/: __init__.py  boi_schema.py
backend/services/: __init__.py  rag_service.py
data/mock_data/: BOI_Overview.txt  Handover_Guide.txt  Integration_Interfaces.txt  Microservices_Catalog.txt
frontend/: jest.config.js  jest.setup.ts  package-lock.json  package.json
frontend/src/__tests__/: uuid.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/documents/: page.tsx
frontend/src/app/admin/organizations/: page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/chat/: page.tsx
tests/: conftest.py  test_agent_nodes.py  test_auth.py  test_config.py  test_graph_retriever.py  test_graph_viz.py  test_ingestion.py  test_models.py  test_neo4j.py  test_routers.py  test_temp_knowledge.py
